@@ -2,6 +2,8 @@
 * Upgraded for Mango 4.3.0
 * Show user count in users page
 * Fix mailing lists not removed from the list when deleted
+* Fix event handlers not removed from the list when filter applied then deleted
+* Fix event detectors not removed from the list via websocket
 
 *Version 4.2.1*
 * Fix where pagination would not get triggered in watchlist builder selected points table
